--- a/Comics/OldGods.html
+++ b/Comics/OldGods.html
@@ -2,10 +2,26 @@
 <html>
 
 <head>
-  <title>Comics </title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <title>OldGods</title>
+  <link href="OldGodsStylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    
+  <div class="flex-container" class="card">
+    <div><img src="pictures/1.png" alt="img 1"></div>
+    <div><img src="pictures/2.png" alt="img 2"></div>
+    <div><img src="pictures/3.png" alt="img 3"></div>
+    <div><img src="pictures/4.png" alt="img 4"></div>
+    <div><img src="pictures/5.png" alt="img 5"></div>
+    <div><img src="pictures/1.png" alt="img 1"></div>
+    <div><img src="pictures/2.png" alt="img 2"></div>
+    <div><img src="pictures/3.png" alt="img 3"></div>
+    <div><img src="pictures/4.png" alt="img 4"></div>
+    <div><img src="pictures/5.png" alt="img 5"></div>
+    <div><img src="pictures/1.png" alt="img 1"></div>
+    <div><img src="pictures/2.png" alt="img 2"></div>
+    <div><img src="pictures/3.png" alt="img 3"></div>
+    <div><img src="pictures/4.png" alt="img 4"></div>
+    <div><img src="pictures/5.png" alt="img 5"></div>
+  </div> 
 </body>
