ilc fall final project additions

--- a/comics.html
+++ b/comics.html
@@ -33,7 +33,17 @@
         <img alt="card image" src="Comics/pictures/1.1.png"/>
         <h4><a href="Comics/OldGods.html">Old Gods</a></h4>
         <!-- <div></div> -->
-    </div>
+      </div>
+      <div class="card">
+        <img alt="card image" src="Comics/pictures/Ball/1.png"/>
+        <h4><a href="Comics/BouncingBall.html">Ball + SVG Tests</a></h4>
+       <!-- <div></div> -->
+      </div>
+      <div class="card">
+        <img alt="card image" src="Comics/pictures/angel2.png"/>
+        <h4><a href="Comics/Angel.html">Angel</a></h4>
+        <!-- <div></div> -->
+      </div>
     </main>
   </div>
 </body>
